--- a/src/pages/ket-qua-than-so-hoc.astro
+++ b/src/pages/ket-qua-than-so-hoc.astro
@@ -4,7 +4,16 @@
 import BaseLayout from '../layouts/BaseLayout.astro';
 import { decryptData } from '../utils/encryption';
 import { 
-    calculateLifePath, calculateDestiny, // ... các import khác
+    calculateLifePath, calculateDestiny, calculateSoul, 
+    calculatePersonality, calculateAttitude, calculateMaturity, 
+    calculateRationalThought,
+    calculatePyramid, calculateChartData,
+    calculatePeriodCycles,
+    calculateKarmicDebt,
+    calculateKarmicLessons,
+    calculatePersonalityPercentages,
+    calculateCareerPercentages,
+    calculateForecast
 } from '../utils/numerology';
 
 // 1. Lấy token từ URL
