--- a/src/pages/ket-qua-than-so-hoc.astro
+++ b/src/pages/ket-qua-than-so-hoc.astro
@@ -564,8 +564,8 @@ const pageTitle = `Hồ Sơ: ${fullName}`;
                         }
                     },
                     scales: {
-                        x: { display: false, max: 100 },
-                        y: { ticks: { color: '#e5e7eb', font: { size: 11 } }, grid: { display: false } }
+                        x: { display: false, max: 40 },
+                        y: { ticks: { color: '#e5e7eb', font: { size: 10 } }, grid: { display: false } }
                     }
                 },
                 plugins: [ChartDataLabels]
@@ -603,7 +603,7 @@ const pageTitle = `Hồ Sơ: ${fullName}`;
                         }
                     },
                     scales: {
-                        x: { display: false, max: 100 },
+                        x: { display: false, max: 40 },
                         y: { ticks: { color: '#e5e7eb', font: { size: 11 } }, grid: { display: false } }
                     }
                 },
@@ -1633,5 +1633,9 @@ const pageTitle = `Hồ Sơ: ${fullName}`;
             text-color: 0 0 10px rgba(242, 201, 76, 0.4);
         }
         .head-outline{ font-size: 2rem;}
+
+        #careerChart,#personalityChart{
+            padding: 1rem;
+        }
     </style>
 </BaseLayout>
